# Puppy-PI-Cpp

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  install_autostart.sh  setup_from_scratch.sh  test_all.sh
noetic_fallback/: README.md  collect_mapping_run.sh  run_vr.sh
noetic_fallback/puppy_vr_control_noetic/: CMakeLists.txt  README_MAPPING_VALIDATION.md  README_MAZE.md  package.xml  setup.py
noetic_fallback/puppy_vr_control_noetic/launch/: lidar_mapping.launch  mapping_validation.launch  maze_autonomy.launch  vr_control.launch
noetic_fallback/puppy_vr_control_noetic/scripts/: camera_udp_sender.py  lidar_mapping.py  mapping_run_recorder.py  maze_autonomy.py  retro_effect.py  robot_status_sender.py  vr_udp_teleop.py
noetic_fallback/puppy_vr_control_noetic/src/puppy_vr_control_noetic/: __init__.py  llm_frontier_selector.py  mapping_artifacts.py  maze_core.py
noetic_fallback/puppy_vr_control_noetic/test/: test_mapping_artifacts.py  test_maze_core.py
puppypi_remote_camera/: README.md
puppypi_remote_camera/config/: laptop_config.yaml  robot_config.yaml
puppypi_remote_camera/laptop/: laptop_client.py  requirements.txt  start_laptop_client.sh  video_recorder.py
puppypi_remote_camera/robot/: camera_stream.py  remote_control.py  requirements.txt  robot_server.py  start_robot_server.sh
ros1_maze_escape/: CMakeLists.txt  README.md  package.xml
ros1_maze_escape/config/: costmap_common.yaml  dwa_local_planner.yaml  explore_lite.yaml  global_costmap.yaml  gmapping.yaml  local_costmap.yaml  maze_brain.yaml  move_base.yaml  rf2o.yaml
ros1_maze_escape/docker/: Dockerfile.noetic
ros1_maze_escape/include/ros1_maze_escape/: frontier_detector.hpp  frontier_scorer.hpp  maze_brain.hpp  velocity_adapter.hpp
ros1_maze_escape/launch/: explore_baseline.launch  mapping.launch  maze_escape.launch  navigation.launch  odometry.launch
ros1_maze_escape/scripts/: setup_and_build_puppypi.sh  validate_noetic.sh
ros1_maze_escape/src/: cmd_vel_adapter_node.cpp  frontier_detector.cpp  heuristic_frontier_scorer.cpp  maze_brain_node.cpp
ros1_maze_escape/test/: frontier_detector_test.cpp  frontier_scorer_test.cpp  velocity_adapter_test.cpp
src/app_cpp/: CMakeLists.txt  README.md  package.xml
src/app_cpp/src/: lidar.cpp
src/driver/puppy_control/: package.xml
src/driver/puppy_control_cpp/: CMakeLists.txt  README.md  package.xml
src/driver/puppy_control_cpp/include/puppy_control_cpp/: puppy_engine.hpp
src/driver/puppy_control_cpp/launch/: puppy_control.launch.py
src/driver/puppy_control_cpp/src/: puppy_control_node.cpp  stub_engine.cpp
src/driver/ros_robot_controller/: package.xml
src/driver/ros_robot_controller_cpp/: CMakeLists.txt  README.md  package.xml
src/driver/ros_robot_controller_cpp/include/ros_robot_controller_cpp/: board.hpp  board_protocol.hpp
src/driver/ros_robot_controller_cpp/launch/: ros_robot_controller.launch.py
src/driver/ros_robot_controller_cpp/src/: board.cpp  ros_robot_controller_node.cpp
src/driver/ros_robot_controller_cpp/test/: test_board_protocol.cpp
src/lidar_mapping_cpp/: CMakeLists.txt  README.md  package.xml
src/lidar_mapping_cpp/include/lidar_mapping_cpp/: mapping_core.hpp
src/lidar_mapping_cpp/launch/: lidar_mapping.launch.py
src/lidar_mapping_cpp/src/: lidar_mapping_node.cpp
src/lidar_mapping_cpp/test/: test_mapping_core.cpp
src/obstacle_climb_cpp/: CMakeLists.txt  README.md  package.xml
src/obstacle_climb_cpp/launch/: obstacle_climb.launch.py
src/obstacle_climb_cpp/src/: obstacle_climb.cpp
src/peripherals/: package.xml
src/peripherals/peripherals/: teleop_key_control.py
src/peripherals/scripts/: 99-ttyACM0.rules
src/peripherals_cpp/: CMakeLists.txt  README.md  package.xml
src/peripherals_cpp/launch/: joystick_control.launch.py
src/peripherals_cpp/src/: remote_control_joystick.cpp  teleop_key_control.cpp  tf_broadcaster_imu.cpp
src/puppy_vr_control/: CMakeLists.txt  README.md  package.xml
src/puppy_vr_control/config/: vr_control_params.yaml
src/puppy_vr_control/include/puppy_vr_control/: vr_teleop_logic.hpp
src/puppy_vr_control/launch/: camera_stream.launch.py  vr_bringup.launch.py  vr_control.launch.py
src/puppy_vr_control/src/: camera_udp_sender.cpp  map_udp_sender.cpp  robot_status_sender.cpp  vr_udp_teleop.cpp
src/puppy_vr_control/test/: test_vr_logic.cpp
src/puppy_vr_control_py/: README.md  package.xml  setup.cfg  setup.py
src/puppy_vr_control_py/launch/: camera_stream.launch.py  vr_control.launch.py
src/puppy_vr_control_py/puppy_vr_control_py/: camera_udp_sender.py  robot_status_sender.py  vr_udp_teleop.py
tools/: analyze_mapping_run.py  check_public_tree.sh  fetch_mapping_run.sh  vr_test_dashboard.py
tools/tests/: test_analyze_mapping_run.py
