<?xml version="1.0"?>
<package format="2">
  <name>ros1_maze_escape</name>
  <version>0.1.0</version>
  <description>ROS Noetic autonomous maze exploration and escape scaffolding for PuppyPi.</description>

  <!-- TODO(MAINTAINER): replace this placeholder with the responsible person. -->
  <maintainer email="maintainer@example.com">PuppyPi Project Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>puppy_control</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export/>
</package>
