<?xml version="1.0"?>
<package format="2">
  <name>puppy_vr_control_noetic</name>
  <version>0.2.0</version>
  <description>
    ROS1 Noetic PuppyPi의 VR 조종, 영상/상태 전송, LiDAR 지도작성과
    frontier 기반 자율 미로 탐색 노드.
  </description>
  <maintainer email="ksyear@users.noreply.github.com">Ksyear</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <depend>puppy_control</depend>
</package>
