<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>app_cpp</name>
  <version>0.1.0</version>
  <description>
    app 파이썬 노드의 C++ 이식판 — LiDAR 응용(장애물 회피/추적/경비).
    (app 패키지의 나머지 entry point 들은 소스 파일이 저장소에 없어 이식 불가)
  </description>
  <maintainer email="ksyear@users.noreply.github.com">Ksyear</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>puppy_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
