<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_mapping_cpp</name>
  <version>0.1.0</version>
  <description>
    LiDAR(LD19)로 2D 점유격자 지도를 만드는 자체 C++ SLAM 노드
    (스캔매칭 + 로그오즈 점유격자, 오도메트리 불필요, slam_toolbox 호환 지도 저장).
    실내에서 GPS 를 대신하는 위치(x, y, θ) 추정도 제공한다.
  </description>
  <maintainer email="ksyear@users.noreply.github.com">Ksyear</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
