<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puppy_vr_control</name>
  <version>0.1.0</version>
  <description>
    Meta Quest(Unity) VR 컨트롤러의 UDP 조이스틱 데이터를 수신해 PuppyPi를 제어하고,
    카메라 영상을 UDP로 VR 헤드셋에 전송하는 C++ 노드 모음.
    (PuppyPi_MR_Controller 저장소의 raspberry_pi/udp_joystick_receiver.py 를 C++/ROS2로 이식)
  </description>
  <maintainer email="ksyear@users.noreply.github.com">Ksyear</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>puppy_control_msgs</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
